Fix homepage image being cropped on smaller devices

--- a/staticfiles/css/styles.css
+++ b/staticfiles/css/styles.css
@@ -91,6 +91,12 @@
     /* Dark green text */
 }
 
+/*----------------------- Homepage ------------------ */
+.profile-img {
+    max-width: 100%;
+}
+
+
 /*----------------------- Dashboard ------------------ */
 .calendar-month {
     text-align: center;
